# defringe-ai

./: .gitignore  CLAUDE.md  HARNESS.md  Makefile  README.md  pyproject.toml
.claude/rules/: architecture.md  coordinates.md  dev.md  docstrings.md  orthogonalization.md  repo-intent.md  server-ops.md  tools.md
design/: workflow-rollout.md  workflow.md
docs/: coordinates.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  AssetNode.tsx  Canvas.tsx  Toolbox.tsx  state.test.ts  state.ts  styles.css
hard_lint/: README.md  check.py  test_check.py
harness_driver/: architecture.md  frontend.md  nomenclature.md  onboarding.md  orthogonalization.md  repo-intent.md  server-ops.md  testing.md  tools.md  undo.md
scripts/: dev.sh
soft_lint/: README.md  instructions.md
specs/: README.md  workflow.md
src/defringe_ai/: __init__.py  board.py  history.py  identity.py  imageops.py  preview.py  projection.py  registry.py  schemas.py  server.py  sessions.py  workspace.py
src/defringe_ai/imageops/: __init__.py  _core.py  annotate.py  geometry.py  shape.py  transform.py  utils.py
src/defringe_ai/tools/: __init__.py  annotate.py  arrange.py  core.py  derive.py  isolate.py  manage.py  merge.py  session.py  shape.py  transform.py
src/defringe_ai/web/: __init__.py  app.py  canvas.css  canvas.html  canvas.js  chains.css
tests/: conftest.py  test_board.py  test_history.py  test_identity.py  test_projection.py  test_registry.py  test_schemas.py  test_server.py  test_sessions.py  test_workspace.py
tests/imageops/: test_annotate.py  test_geometry.py  test_shape.py  test_transform.py  test_utils.py
tests/web/: test_app.py
