[project]
name = "defringe-ai"
version = "0.0.1"
description = "AI-native image tooling: deterministic raster transforms exposed as MCP tools a vision model can call and self-correct against."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lbapplications" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "numpy>=2.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# ML background removal for photographic inputs where luminance keying fails (v1).
ml = ["rembg>=2.0"]

[project.scripts]
defringe-ai = "defringe_ai.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defringe_ai"]

# --- dev / test tooling ---------------------------------------------------------
# uv installs the `dev` group by default (`uv sync`), so `uv run pytest` just works.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.28",       # backend for starlette's in-process TestClient
    "watchfiles>=0.24",  # `dev.sh --watch`: restart the server on .py changes (live testing)
]

# pytest: discover the mirror-of-src suite under tests/, and on every run measure
# BRANCH coverage of the package and FAIL if it drops below the gate (90%). The gate
# travels with the suite, so `uv run pytest` alone enforces it — and so does `make test`.
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=defringe_ai --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["defringe_ai"]

[tool.coverage.report]
show_missing = true
# Lines that can't be exercised in-process (network entrypoints, defensive guards).
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
